# circuitpython-ch9239

./: .gitignore  README.md  pyproject.toml
ch9329/: __init__.py  ch9239.py  ch9329.py
example/: code.py
